--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@ Oui.
 
 <section>
 <section>
+<h3 style="text-transform:none;">Partie № 1 </h3>
 <h1 style="text-transform:none;">La musique</h1>
 </section>
 <section>
@@ -290,6 +291,7 @@ Oui.
 </section>
 <section>
 <section>
+<h3 style="text-transform:none;">Partie № 2 </h3>
 <h1 style="text-transform:none;">Le numérique</h1>
 </section>
 <section>
@@ -311,6 +313,8 @@ Oui.
 </section>
 <section>
 <section>
+<h3 style="text-transform:none;">Partie № 3 </h3>
+
 <h1 style="text-transform:none;">Le glitch</h1>
 </section>
 <section>
